k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-api-ingress
  namespace: proxy-test-ns
  annotations:
    linkerd.io/inject: enabled  # Enable Linkerd injection for Ingress
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Capture everything after /api/
spec:
  ingressClassName: nginx
  rules:
  # Go to Azure and get/create FQDN in Public IP and put value here (proxytestangular.eastus.cloudapp.azure.com)
  - host: proxytestangular.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-app-service
            port:
              number: 80
      - path: /api(/|$)(.*)  # Match /api and everything after it
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-api-service
            port:
              number: 3000
